@@ -1,4 +1,4 @@
-<!-- $Id: actions.xml,v 1.27 2006/09/05 14:28:57 mattias Exp $ -->
+<!-- $Id: actions.xml,v 1.28 2006/09/07 20:23:44 mattias Exp $ -->
 <actions>
 
 	<!-- MySettings -->
@@ -16,6 +16,13 @@
 		<view name="input">/cms/managementtool/viewValidationForm.vm</view>
 		<view name="success">/cms/managementtool/viewValidationResults.vm</view>
 		<view name="error">/cms/managementtool/error.vm</view>
+	</action>
+
+	<!-- DatabaseDefinitions -->
+	<action name="org.infoglue.deliver.applications.actions.ViewDatabaseSettingsAction" alias="ViewDatabaseSettings">
+		<view name="input">/deliver/viewDatabaseSettings.vm</view>
+		<view name="success">/deliver/viewDatabaseSettings.vm</view>
+		<view name="error">/deliver/error.vm</view>
 	</action>
 
 	<!-- Test -->
