@@ -1,0 +1,84 @@
+<?xml version="1.0" encoding="iso-8859-1"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "DTD/xhtml1-strict.dtd">
+
+<html>
+<head>
+	<title>Database settings page</title>
+	
+	<style>
+	<!--
+		.header 
+		{
+			font-family : Verdana;
+			font-size 	: 16pt;
+			font-weight : bold;
+		}
+		.label
+		{
+			font-family	:Verdana;
+			font-size	:10pt;
+			font-weight : bold;
+		}
+		.text 
+		{
+			font-family	:Verdana;
+			font-size	:10pt;
+		}
+		.texttrue 
+		{
+			font-family	:Verdana;
+			font-size	:10pt;
+		}
+		.textfalse 
+		{
+			font-family	:Verdana;
+			font-size	:10pt;
+			color  		:red;
+		}
+		.fullymarginalized 
+		{
+			margin-left	: 50;
+			margin-right: 50;
+			margin-top	: 10%;
+		}
+	-->
+	</style>
+
+</head>
+
+<body>
+
+<center>
+
+<table class="fullymarginalized" border="0" cellpadding="2" cellspacing="0">
+  <tr>
+    <td colspan="4" class="header">InfoGlue Database Settings ($serverName)</td>
+  </tr>
+  <tr>
+    <td colspan="4"><hr/></td>
+  </tr>
+  <tr>
+    <td colspan="4">
+    	#foreach($databaseHash in $databases)
+			$databaseHash
+    	#end
+    </td>
+  </tr>
+  <tr>
+    <td colspan="4"><hr/></td>
+  </tr>
+  <tr>
+    <td colspan="4">
+    	<form action="ViewDatabaseSettings!update.action" >
+			<label for="databasesXML">Databases:</label>
+			<textarea id="databasesXML" name="databasesXML" style="width: 400px; height: 300px;">$!databasesXML</textarea>
+			<input type="submit" value="Save"/>
+		</form>
+    </td>
+  </tr>
+</table>
+</center>
+
+</body>
+
+</html>
